# gwm-cli

./: .gitignore  .gwm.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  flake.nix
.githooks/: pre-commit
.github/: LABELS.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check-rc-changelog-dupes.sh  render-tap-formula.sh
.github/workflows/: ci.yml  pre-release.yml  release.yml
benches/: commit_graph.rs  sidebar_recent_commits.rs
changelogs/: 0.1.0.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.6.0.md  0.7.0.md
changelogs/pre-releases/: 0.2.0-rc.1.md  0.3.0-rc.1.md  0.3.0-rc.2.md  0.3.0-rc.3.md  0.5.0-rc.1.md  0.5.0-rc.2.md  0.6.0-rc.1.md  0.7.0-rc.1.md  0.7.0-rc.2.md  0.7.0-rc.3.md  0.8.0-rc.1.md  0.8.0-rc.2.md  0.8.0-rc.3.md  0.8.0-rc.4.md
claudedocs/: test-audit-0.4.0.md
docs/: 7.roadmap.md  README.md  index.md
docs/1.getting-started/: 1.install.md  2.first-worktree.md  3.shell-init.md  index.md
docs/2.tui/: 1.keybindings.md  2.sidebar.md  3.filter.md  4.confirm-countdown.md  5.launchers.md  6.open-dispatch.md  index.md
docs/3.cli/: 1.reference.md  2.completions.md  3.multiplexer.md  index.md
docs/4.configuration/: 1.gwm-toml.md  2.bootstrap.md  3.guards.md  4.when-predicates.md  5.trust-ledger.md  index.md
docs/5.integrations/: 1.github-linking.md  2.doctor.md  3.homebrew-nix.md  index.md
docs/6.development/: 1.testing.md  2.contributing.md  index.md
examples/: gwm.toml.example
packaging/homebrew/: gwm.rb.template
skills/: SKILL.md
src/: aliases.rs  bootstrap.rs  cli.rs  config.rs  config_cli.rs  doctor.rs  error.rs  github.rs  gitmoji.rs  history.rs  hooks.rs  issue_templates.rs  labels.rs  launcher.rs  lib.rs  lifecycle.rs  main.rs  milestones.rs  multiplexer.rs  naming.rs  pr_templates.rs  sync.rs  templating.rs  trust.rs  worktree.rs
src/tui/: app.rs  commit_graph.rs  keymap.rs  mod.rs  palette.rs  theme.rs  ui.rs
src/tui/state/: confirm.rs  create_form.rs  filter.rs  github_fetch.rs  link_prompt.rs  mod.rs  sidebar.rs
tests/: aliases_tests.rs  binstall_metadata_tests.rs  bootstrap_tests.rs  bootstrap_when_tests.rs  cli_binary.rs  cli_format_tests.rs  commit_graph_perf_tests.rs  config_cli_tests.rs  config_tests.rs  doctor_tests.rs  error_tests.rs  error_variants_tests.rs  flake_tests.rs  github_tests.rs  gitmoji_tests.rs  history_tests.rs  homebrew_formula_tests.rs  hooks_tests.rs  keymap_tests.rs  labels_tests.rs  launcher_tests.rs  milestones_tests.rs  multiplexer_tests.rs  naming_tests.rs  palette_tests.rs  pr_templates_tests.rs  precommit_hook_tests.rs  release_workflow_tests.rs  sync_tests.rs  templating_tests.rs  theme_tests.rs  trust_tests.rs  tui_app_tests.rs  tui_chord_tests.rs  tui_state_confirm_tests.rs  tui_state_create_form_tests.rs  tui_state_filter_tests.rs  tui_state_github_fetch_tests.rs  tui_state_link_prompt_tests.rs  tui_state_palette_tests.rs  (+3 more)
tests/common/: mod.rs
