[package]
name = "gwm"
version = "0.3.0-rc.1"
edition = "2021"
description = "git worktree manager — TUI + CLI, native libgit2, per-repo bootstrap"
authors = ["Kylian Bardini"]
license = "MIT"
repository = "https://github.com/kbrdn1/gwm-cli"
readme = "README.md"
keywords = ["git", "worktree", "tui", "cli", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "gwm"
path = "src/lib.rs"

[[bin]]
name = "gwm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
clap_complete = "4.5"
ratatui = "0.30"
crossterm = "0.29"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
serde = { version = "1", features = ["derive"] }
toml = "1.1"
anyhow = "1"
thiserror = "2"
dirs = "5"
regex = "1"
shellexpand = "3"
chrono = { version = "0.4", features = ["serde"] }
which = "8"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
