[package]
name = "gwm"
version = "0.8.0-rc.3"
edition = "2021"
# MSRV is the floor required by every use in the crate, not just the
# newest one introduced here. `std::sync::LazyLock` (this PR, src/naming.rs)
# wants 1.80; `std::iter::repeat_n` (existing code in src/tui/ui.rs's
# countdown bar) wants 1.82. The crate as a whole compiles at 1.82+,
# so MSRV is set to the higher floor. CI's clippy MSRV lint enforces it.
rust-version = "1.82"
description = "git worktree manager — TUI + CLI, native libgit2, per-repo bootstrap"
authors = ["Kylian Bardini"]
license = "MIT"
repository = "https://github.com/kbrdn1/gwm-cli"
readme = "README.md"
keywords = ["git", "worktree", "tui", "cli", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

# cargo-binstall (#27): pull the prebuilt binary from the GitHub
# Release instead of compiling git2/vendored-libgit2 from source.
# Mirrors the release workflows' artefact naming — `gwm-v{version}-
# {target}.tar.gz` (`.zip` on windows) — and the in-archive layout
# `gwm-v{version}-{target}/{gwm|gwm.exe}`. `tests/binstall_metadata_tests.rs`
# pins this block against drift.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gwm-v{ version }-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "gwm-v{ version }-{ target }/{ bin }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/gwm-v{ version }-{ target }.zip"
pkg-fmt = "zip"

[lib]
name = "gwm"
path = "src/lib.rs"

[[bin]]
name = "gwm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color"] }
clap_complete = "4.5"
ratatui = "0.30"
crossterm = "0.29"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "1.1"
toml_edit = "0.25"
anyhow = "1"
thiserror = "2"
dirs = "6"
regex = "1"
shellexpand = "3"
chrono = { version = "0.4", features = ["serde"] }
which = "8"
glob = "0.3"
nucleo-matcher = "0.3"
shell-words = "1"
tempfile = "3"
# Issue #95: SHA-256 over the raw bytes of `.gwm.toml` for the TOFU
# trust ledger. Whitespace-sensitive on purpose — `rm -rf /tmp/` and
# `rm -rf /tmp /` are visually close but semantically different, so
# we hash bytes, not parsed TOML.
sha2 = "0.11"

# Unix-only: needed for `O_NOFOLLOW` in bootstrap's TOCTOU-safe copy
# primitives (issue #93). Already pulled in transitively by git2 /
# dirs / cc, declared here for explicit use in `src/bootstrap.rs`.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8"
predicates = "3"
# Parse our own Cargo.toml in tests/binstall_metadata_tests.rs (#27) so
# the `[package.metadata.binstall]` contract is asserted structurally,
# not by string-matching. Same `toml` major as the runtime dependency.
toml = "1.1"

[[bench]]
name = "commit_graph"
harness = false

[[bench]]
name = "sidebar_recent_commits"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
